# X2_RenderingEngine

./: .gitmodules  Build.bat  CMakeLists.txt  README.md
Assets/Model/damagedHelmet/: DamagedHelmet.arkmsh
Assets/Model/default/: BackgroundMesh.ply  Box.ply  Complex.ply  Cylinder.ply  LargeQuad.ply  NineSphere.ply  RingSphere.ply  Sphere.ply  Tablet.ply
Assets/Shader/: AO_Blur_Shader.shader  AO_Cover_Shader.shader  Background_Shader.shader  CMakeLists.txt  CSM_ShadowCaster_Shader.shader  CascadeEVSM_Blit_Shader.shader  CascadeEVSM_Blur_Shader.shader  CascadeEVSM_ShadowCaster_Shader.shader  ForwardPBR_Shader.shader  GTAO_Shader.shader  Geometry_Shader.shader  HBAO_Shader.shader  PrefilteredEnvironmentMap_Shader.shader  PrefilteredIrradiance_Shader.shader  PresentShader.shader  SSAO_Shader.shader  SimpleMesh.shader
Assets/Shader/SourceCode/: AO_Blur_Shader.frag  AO_Blur_Shader.vert  AO_Cover_Shader.frag  Background_Shader.frag  Background_Shader.vert  CascadeEVSM_Blit_Shader.frag  CascadeEVSM_Blit_Shader.vert  CascadeEVSM_Blur_Shader.frag  CascadeEVSM_ShadowCaster_Shader.frag  CascadeEVSM_ShadowCaster_Shader.vert  ForwardPBR_Shader.frag  ForwardPBR_Shader.vert  GTAO_Shader.frag  GTAO_Shader.vert  Geometry_Shader.frag  Geometry_Shader.vert  HBAO_Shader.frag  PrefilteredEnvironmentMap_Shader.frag  PrefilteredEnvironmentMap_Shader.vert  PrefilteredIrradiance_Shader.frag  PrefilteredIrradiance_Shader.vert  PresentShader.frag  SSAO_Shader.frag  SimpleMesh_Shader.frag
Assets/Shader/SourceCode/Utils/: BackgroundRendering.glsl  CSM_ShadowReceiver.glsl  Camera.glsl  CascadeEVSM_ShadowReceiver.glsl  Light.glsl  Object.glsl
Assets/Shader/Spv/: AO_Blur_Shader.frag.spv  AO_Blur_Shader.vert.spv  AO_Cover_Shader.frag.spv  Background_Shader.frag.spv  Background_Shader.vert.spv  CSM_ShadowCaster_Shader.frag.spv  CSM_ShadowCaster_Shader.vert.spv  CascadeEVSM_Blit_Shader.frag.spv  CascadeEVSM_Blur_Shader.frag.spv  ForwardPBR_Shader.frag.spv  GTAO_Shader.frag.spv  Geometry_Shader.frag.spv  Geometry_Shader.vert.spv  HBAO_Occlusion_Shader.frag.spv  HBAO_Shader.frag.spv  PrefilteredEnvironmentMap_Shader.frag.spv  PrefilteredEnvironmentMap_Shader.vert.spv  PrefilteredIrradiance_Shader.frag.spv  PrefilteredIrradiance_Shader.vert.spv  PresentShader.frag.spv  SSAO_Shader.frag.spv  SimpleMesh_Shader.frag.spv  SimpleMesh_Shader.vert.spv
Assets/SkyBox/CountryClub/: coefficients.txt
Assets/SkyBox/DaySky/: coefficients.txt
Assets/SkyBox/NeonStudio/: coefficients.txt
Engine/: Precompiled.h
Engine/X2/: Core.h  EditorLayer.cpp  EditorLayer.h  EntryPoint.h  X2.cpp
Engine/X2/Asset/: Asset.h  AssetExtensions.h  AssetImporter.cpp  AssetImporter.h  AssetManager.h  AssetMetadata.h  AssetRegistry.cpp  AssetRegistry.h  AssetSerializer.cpp  AssetSerializer.h  AssetTypes.h  AssimpMeshImporter.cpp  AssimpMeshImporter.h  MeshRuntimeSerializer.cpp  MeshRuntimeSerializer.h  MeshSerializer.cpp  MeshSerializer.h  MeshSourceFile.h  TextureImporter.cpp  TextureImporter.h  TextureRuntimeSerializer.cpp  TextureRuntimeSerializer.h
Engine/X2/Core/: Application.cpp  Application.h  Assert.h  Base.cpp  Base.h  Buffer.h  Hash.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  LogCustomFormatters.h  Memory.cpp  Memory.h  Ref.cpp  Ref.h  RenderThread.cpp  RenderThread.h  Thread.cpp  Thread.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  WindowsWindow.cpp  WindowsWindow.h
Engine/X2/Editor/: ApplicationSettings.cpp  ApplicationSettings.h  AssetEditorPanel.cpp  AssetEditorPanel.h  AssetEditorPanelInterface.cpp  AssetEditorPanelInterface.h  DefaultAssetEditors.cpp  DefaultAssetEditors.h  ECSDebugPanel.cpp  ECSDebugPanel.h  EditorCamera.cpp  EditorCamera.h  EditorConsolePanel.cpp  EditorConsolePanel.h  EditorPanel.h  EditorResources.h  FontAwesome.h  MeshViewerPanel.cpp  MeshViewerPanel.h  PanelManager.cpp  PanelManager.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SelectionManager.cpp  SelectionManager.h
Engine/X2/ImGui/: Colours.cpp  Colours.h  CustomTreeNode.cpp  CustomTreeNode.h  ImGui.h  ImGuiBuild.cpp  ImGuiFonts.cpp  ImGuiFonts.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiUtilities.cpp  ImGuiUtilities.h  ImGuiWidgets.cpp  ImGuiWidgets.h  ImGuizmo.cpp  ImGuizmo.h  UICore.cpp  UICore.h  VulkanImGui.cpp
Project/: X2.xproj
Project/Assets/: AssetRegistry.xzr
Resources/: ShaderPack.xsp
Resources/Shaders/: Deinterleaving.glsl  DirShadowMap.glsl  DirShadowMap_Anim.glsl  HZB.glsl  JumpFlood_Composite.glsl  JumpFlood_Init.glsl  JumpFlood_Pass.glsl  LightCulling.glsl  PBR_Anim.glsl  PBR_Static.glsl  PBR_Transparent.glsl  PointShadowMap.glsl  PreDepth.glsl  PreDepth_Anim.glsl  RayMarchingLightInjection.glsl  RayMarchingScattering.glsl  Reinterleaving.glsl  Renderer2D.glsl  Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Text.glsl  SelectedGeometry.glsl  SelectedGeometry_Anim.glsl  Skybox.glsl  SpotShadowMap.glsl  SpotShadowMap_Anim.glsl  Wireframe.glsl  Wireframe_Anim.glsl
X2Engine/: Engine.cpp  Engine.h  main.cpp
X2Engine/Asset/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
X2Engine/Behaviour/: AOVisualizationRenderer_Behaviour.cpp  AOVisualizationRenderer_Behaviour.h  BackgroundRenderer_Behaviour.cpp  BackgroundRenderer_Behaviour.h  CameraMoveBehaviour.cpp  CameraMoveBehaviour.h  PresentRenderer_Behaviour.cpp  PresentRenderer_Behaviour.h  SimpleForwardRenderer_Behaviour.cpp  SimpleForwardRenderer_Behaviour.h
X2Engine/Camera/: OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
X2Engine/Light/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
X2Engine/Utils/: Bitmap.cpp  Bitmap.h  ChildBrotherTree.h  CrossLinkableNode.cpp  CrossLinkableNode.h  CubemapUtils.cpp  CubemapUtils.h  IntersectionChecker.cpp  IntersectionChecker.h  OrientedBoundingBox.cpp  OrientedBoundingBox.h  RandomSphericalCoordinateGenerator.cpp  RandomSphericalCoordinateGenerator.h  SphericalHarmonicsUtils.cpp  SphericalHarmonicsUtils.h  SpirvReflect.cpp  SpirvReflect.h  Time.cpp  Time.h
(+342 files in other folders)
